Add ireland postcode (eircode)
https://www.citizensinformation.ie/en/consumer/phone_internet_tv_and_postal_services/eircode.html#:~:text=The%20Eircode%20should%20be%20placed,mandatory%20to%20use%20the%20Eircode. The eircode is not mandatory. Code not tested. Cheers ;)

Address sample: 

Block C
Maynooth Business Campus
Maynooth
Kildare
W23 F854

--- a/conf/countries/worldwide.yaml
+++ b/conf/countries/worldwide.yaml
@@ -988,6 +988,7 @@ IE:
         {{{house_number}}} {{{road}}}
         {{#first}} {{{suburb}}} || {{{city_district}}} || {{{neighbourhood}}} {{/first}}
         {{#first}} {{{city}}} || {{{town}}} || {{{village}}} || {{{hamlet}}} || {{{municipality}}} {{/first}}
+        {{{postcode}}}
         {{{county}}}
         {{{country}}}
     replace:
